PN-19800 feat: implement base notification validation strategy